--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "quality:fix": "npm run type-check && npm run lint:fix && npm run format"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "html2canvas": "^1.4.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.539.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.8.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
